                               Set::Relation
---------------------------------------------------------------------------

2009-02-01   Darren Duncan <perl@DarrenDuncan.net>

    * Set::Relation version 0.2.0 for Perl 5 is released on CPAN as
    Set-Relation-0.2.0.tar.gz.

    * (Relation.pm)  Added full documentation for the remaining 25 object
    methods that Set::Relation expects to have implemented prior to being
    moved to alpha development status; each is marked TODO in its title;
    this change item doesn't have a list of said methods, but when they are
    implemented in the next 1-3 releases, the change log will mention them
    simply as being new, same as if they hadn't been pre-documented now
    (and the TODO marker on their docs will be silently removed).

    * (Relation.pm)  Added placeholder code for said 25 TODO methods, each
    of which will die with an "unimplemented" message if invoked.

    * (Relation.pm)  Other minor code updates.

2009-01-31   Darren Duncan <perl@DarrenDuncan.net>

    * Set::Relation version 0.1.0 for Perl 5 is released on CPAN as
    Set-Relation-0.1.0.tar.gz.

    * This release features a few API changes, some significant feature
    additions, and bug fixes to existing routines, but no public facing
    routines have been added or removed.  New routines should feature in
    the next 0.Y.0 release.

    * (Relation.pm)  Updated each of the 5 functional methods ["union",
    "exclusion", "intersection", "join", "product"] so it is now an N-adic
    operator rather than a dyadic operator.  Each method's "other"
    parameter was renamed to "others" and now takes either a single
    Set::Relation object as before or an Array of 0..N Set::Relation
    objects which is new.  With this change, these operators are now at
    feature parity with the Muldis D functions they are based on, except
    that they never handle the niladic option; being object methods, there